--- a/electron/index.html
+++ b/electron/index.html
@@ -2,8 +2,14 @@
 <html>
   <head>
   <meta charset="UTF-8">
+  <title>Play</title>
+  <link rel="stylesheet" type="text/css" href="main.css" media="screen">
+  <script src='index.js'></script>
   </head>
   <body>
     <webview id='mainWebView' src='http://localhost:5000/static/electron/index.html' autosize='on' plugins disablewebsecurity></webview>
+    <div id="quit" onclick="appQuit();">
+      Quit ⌘+Q
+    </div>
   </body>
 </html>
