--- a/electron/index.html
+++ b/electron/index.html
@@ -7,7 +7,7 @@
   <script src='index.js'></script>
   </head>
   <body>
-    <webview id='mainWebView' src='http://localhost:5000/static/electron/index.html' autosize='on' plugins disablewebsecurity></webview>
+    <webview id='mainWebView' src='http://localhost:5000/electron/index.html' autosize='on' plugins disablewebsecurity></webview>
     <div id="quit" onclick="appQuit();">
       Quit ⌘+Q
     </div>
