--- a/server/play/electron/index.html
+++ b/server/play/electron/index.html
@@ -4,32 +4,25 @@
   <meta charset="UTF-8">
   <title>Play for Mac</title>
   <link rel="stylesheet" type="text/css" href="/static/bulma.css">
-  <link rel="stylesheet" type="text/css" href="/static/electron/app.css">
+  <link rel="stylesheet" type="text/css" href="/electron/app.css">
   </head>
   <body>
-    <h2 id="title">Play</h2>
-    <div id="play-button">
-      <img src="/static/electron/on.png" id="play-start-end">
+    <div id="fixed-div">
+      <h2 id="title">Play</h2>
+      <div id="play-button">
+        <img src="/electron/on.png" id="play-start-end">
+      </div>
     </div>
 
     <div id="playlist">
       <ul id="ul">
       </ul>
     </div>
-
-    <div id="control">
-      <div class="control-input">
-        <input class="input" type="text" id="youtube-url" name="youtube-url" placeholder="Youtube URL">
-      </div>
-      <div class="control-button">
-        <a class="button is-light" id="queue">Queue</a>
-      </div>
-    </div>
   
     <div id="youtube-audio"></div>
 
     <div id="loading">
-      <img src="/static/electron/loading.gif">
+      <img src="/electron/loading.gif">
     </div>
 
     <script>
@@ -48,6 +41,6 @@
         delete window.__tempModuleExports__;
       }
     </script>
-    <script src='/static/electron/app.js'></script>
+    <script src='/electron/app.js'></script>
   </body>
 </html>
